Switch to local asset images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     #slider .swiper-slide img { width: 100%; height: 100%; object-fit: cover; }
 
     .hero {
-      background-image: url('https://cdn.example.com/hero-lifestyle.jpg');
+      background-image: url('assets/top.jpg');
       background-size: cover;
       background-position: center;
       min-height: 90vh;
@@ -182,11 +182,11 @@
   <section id="slider">
     <div class="swiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="https://cdn.example.com/slide1.jpg" alt="slide1"></div>
-        <div class="swiper-slide"><img src="https://cdn.example.com/slide2.jpg" alt="slide2"></div>
-        <div class="swiper-slide"><img src="https://cdn.example.com/slide3.jpg" alt="slide3"></div>
-        <div class="swiper-slide"><img src="https://cdn.example.com/slide4.jpg" alt="slide4"></div>
-        <div class="swiper-slide"><img src="https://cdn.example.com/slide5.jpg" alt="slide5"></div>
+        <div class="swiper-slide"><img src="assets/Stephanie Dawn.jpg" alt="Stephanie Dawn"></div>
+        <div class="swiper-slide"><img src="assets/american-jewel_158x42.jpg" alt="American Jewel"></div>
+        <div class="swiper-slide"><img src="assets/habarsham.jpg" alt="Habarsham"></div>
+        <div class="swiper-slide"><img src="assets/joseijishin1.jpg" alt="Media"></div>
+        <div class="swiper-slide"><img src="assets/kokode1.png" alt="Kokode"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
