--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     /* SLIDER */
     /* SLIDER */
     #slider { padding: 2rem 0; background:#fff; }
-    #slider .swiper { width: 100%; max-width: 1100px; margin: 0 auto; aspect-ratio: 16/9; }
+    #slider .swiper { width: 100%; max-width: 900px; margin: 0 auto; aspect-ratio: 16/9; }
     #slider .swiper-slide { display:flex; align-items:center; justify-content:center; }
-    #slider .swiper-slide img { width: 100%; height: 100%; object-fit: contain; }
+    #slider .swiper-slide img { width: 90%; height: 90%; object-fit: contain; }
 
     /* COMPANY INFO */
     .company-info {
@@ -150,7 +150,9 @@
     #about p { white-space: pre-line; font-size: 1.05rem; }
     .about-images { display:grid; gap:1.5rem; margin-top:2rem; }
     @media(min-width:600px){ .about-images{ grid-template-columns:repeat(2,1fr); } }
-    .about-images img { width:100%; height:280px; object-fit:cover; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
+    .about-images figure {position:relative;}
+    .about-images img { width:100%; aspect-ratio:1/1; object-fit:cover; border-radius:8px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
+    .about-images figcaption { margin-top:0.5rem; font-size:0.95rem; text-align:center; color:#555; }
 
     /* BRAND GRID */
     .brand-grid {
@@ -238,8 +240,14 @@
       </p>
 
       <div class="about-images">
-        <img src="assets/SohoSD1.jpg" alt="Stephanie Dawn バッグのイメージ">
-        <img src="assets/avantiforweb.jpg" alt="Avanti タオルのイメージ">
+        <figure>
+          <img src="assets/SohoSD1.jpg" alt="Stephanie Dawn キルトバッグ SoHo">
+          <figcaption>Stephanie Dawn キルトバッグ「SoHo」</figcaption>
+        </figure>
+        <figure>
+          <img src="assets/avantiforweb.jpg" alt="Avanti 海モチーフ刺繍タオル">
+          <figcaption>Avanti 海モチーフ刺繍タオル</figcaption>
+        </figure>
       </div>
     </div>
   </section>
@@ -344,7 +352,7 @@
 
   <!-- FOOTER -->
   <footer>
-    © <script>document.write(new Date().getFullYear())</script> MiKaKi Connection Inc. All rights reserved.
+    &copy; <script>document.write(new Date().getFullYear())</script> MiKaKi Connection Inc. All rights reserved.
   </footer>
   <script src="https://unpkg.com/swiper@9/swiper-bundle.min.js"></script>
   <script>
@@ -352,6 +360,13 @@
       loop: true,
       autoplay: { delay: 5000, disableOnInteraction: false },
       pagination: { el: '.swiper-pagination', clickable: true },
+      spaceBetween: 20,
+      slidesPerView: 2,
+      slidesPerGroup: 1,
+      breakpoints: {
+        0: { slidesPerView: 1 },
+        768: { slidesPerView: 2 }
+      }
     });
   </script>
 </body>
