--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     .btn-primary { background: rgba(0,0,0,0.85); transition: background .3s; }
     .btn-primary:hover { background: rgba(0,0,0,1); }
     /* Brand logo hover */
-    .brand-grid img { filter: grayscale(100%) brightness(90%); transition: transform .3s, filter .3s; }
-    .brand-grid img:hover { filter:none; transform: scale(1.05); }
+    .brand-grid img { transition: transform .3s; }
+    .brand-grid img:hover { transform: scale(1.05); }
     body { font-family: var(--font-body); line-height: 1.6; color: var(--color-secondary); }
     img { max-width: 100%; height: auto; display: block; }
     a { color: inherit; text-decoration: none; }
@@ -55,7 +55,12 @@
       margin: 0 auto;
       padding: 0.75rem 1rem;
     }
-    nav ul { list-style: none; display: flex; gap: 1.5rem; }
+    nav ul { list-style: none; display: flex; gap: 2rem; letter-spacing:0.04em; }
+    nav li { position:relative; }
+    nav li a { font-size:1rem; font-family:var(--font-heading); text-transform:uppercase; font-weight:600; }
+    nav li a::after { content:''; position:absolute; left:0; bottom:-6px; width:0; height:2px; background:var(--color-accent); transition:width .3s; }
+    nav li a:hover::after { width:100%; }
+    nav li a:hover { color:var(--color-accent); }
     nav li a {
       font-size: 1.15rem;
       font-size: 1.05rem;
@@ -79,7 +84,21 @@
     /* HERO */
     .catchcopy { word-break: keep-all; font-family: var(--font-heading); font-weight:600; }
     .hero-cta { display:flex; flex-direction:column; align-items:center; gap:0.8rem; margin-top:1.5rem; }
-    .hero-cta .btn-primary { background: rgba(0,0,0,0.8); }
+    .hero-cta .btn-primary {
+      background: linear-gradient(135deg,#111,#444);
+      border-radius:32px;
+      padding:0.9rem 2.5rem;
+      box-shadow:0 4px 12px rgba(0,0,0,0.25);
+      position:relative;
+    }
+    .hero-cta .btn-primary::after{
+      content:'➔';
+      font-size:1.2rem;
+      margin-left:0.6rem;
+      position:relative;
+      top:2px;
+    }
+    .hero-cta .btn-primary:hover{ transform:translateY(-2px); background:linear-gradient(135deg,#000,#333); }
     .hero-cta img { height:60px; }
 
     
@@ -108,9 +127,11 @@
     .company-info dt {
       font-weight: 700;
       color: var(--color-accent);
-      text-align: right;
+      text-align: left;
+      padding-left: 0.5rem;
+      border-left: 4px solid var(--color-accent);
     }
-    .company-info dd { margin: 0; }
+    .company-info dd { margin:0; line-height:1.7; }
 
     @media (max-width: 600px) {
       .company-info { grid-template-columns: 1fr; }
@@ -155,20 +176,23 @@
     }
     .btn-primary {
       background: var(--color-primary);
-      color: #fff;
-      padding: 0.75rem 2rem;
-      border-radius: 4px;
-      font-weight: 700;
-      display: inline-block;
+      color:#fff;
+      padding:0.75rem 2rem;
+      border-radius:4px;
+      font-weight:700;
+      display:inline-block;
+      transition:all .3s;
+      text-align:center;
     }
     .btn-primary:hover { background: #222222; }
 
-    section { padding: 4rem 1rem; }
+    section { padding:3.5rem 1rem; }
     .container { max-width: 1100px; margin: 0 auto; }
     .section-heading { text-align: center; margin-bottom: 2.5rem; }
 
     /* ABOUT */
-    #about p { white-space: pre-line; font-size: 1.05rem; }
+    #about p { white-space:pre-line; font-size:1.05rem; }
+    .about-text{margin-top:1rem !important;}
     .about-images { display:flex; gap:1.5rem; justify-content:center; flex-wrap:wrap; margin-top:2rem; }
     @media(min-width:600px){ .about-images{ grid-template-columns:repeat(2,1fr); } }
     .about-images figure {position:relative;}
